fix/fix-all-endpoints
